fixed some bugs

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -89,5 +89,8 @@
         <li>Garnish with freshly grated Parmesan cheese and chopped fresh basil or parsley.</li>
         <li>Serve immediately and enjoy your delicious Homemade Pasta Bolognese!</li>
     </ol>
+    <h1> </h1>
+    
+    <a href="../index.html">Go back to home</a>
 </body>
 </html>
