I have added some styles with the hovering effect.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipes | Lasagna</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <h1><em>Homemade Lasagna</em></h1>
@@ -34,7 +39,7 @@
         <li>Optional: vegetables like spinach, mushrooms, or zucchini</li>
     </ul>
     <h2><em>Steps</em></h2>
-    <ol>
+    <ul>
         <li>Preheat oven to 375°F (190°C).</li>
         <li>Cook lasagna noodles according to package instructions.</li>
         <li>In a skillet, sauté onions and garlic in olive oil until soft.</li>
@@ -47,8 +52,10 @@
         <li>Cover with foil and bake for 25-30 minutes.</li>
         <li>Remove foil, bake for 10-15 minutes until golden.</li>
         <li>Let cool, then slice and serve. Enjoy your lasagna!</li>
-    </ol>
-
-    <a href="../index.html">Go back to home</a>
+    </ul>
+    <div class="man">
+        <h4>Made by MrNoBox</h4>
+    </div>
+    <h5 class="github">Source Code - <a class="info" href="https://www.github.com/localbox404" target="_blank">Github</a></h5>
 </body>
 </html>
