--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipes | Pasta</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap" rel="stylesheet">
+    
+
 </head>
 <body>
     <h1><em>Homemade Pasta Bolognese</em></h1>
@@ -50,7 +56,7 @@
     </ul>
     <h2><em>Steps</em></h2>
     <h3>Step 1: Prepare the Homemade Pasta</h3>
-    <ol>
+    <ul>
         <li>On a clean work surface, mound 2 cups of all-purpose flour and create a well in the center.</li>
         <li>Crack 3 eggs into the well and lightly beat them with a fork.</li>
         <li>Gradually incorporate the flour into the eggs until a dough forms.</li>
@@ -58,9 +64,9 @@
         <li>Wrap the dough in plastic wrap and let it rest at room temperature for 30 minutes.</li>
         <li>After resting, roll out the dough thinly using a rolling pin or pasta machine.</li>
         <li>Cut the rolled-out dough into your desired shape for the pasta (e.g., fettuccine, tagliatelle).</li>
-    </ol>
+    </ul>
     <h3>Step 2: Prepare the Bolognese Sauce</h3>
-    <ol>
+    <ul>
         <li>Heat 2 tablespoons of olive oil in a large pot over medium heat.</li>
         <li>Add 1 finely chopped onion, 1 diced carrot, and 1 diced celery stalk. Cook until softened, about 5-7 minutes.</li>
         <li>Add 2 cloves of minced garlic and cook for another minute until fragrant.</li>
@@ -70,26 +76,28 @@
         <li>Season with salt and pepper to taste.</li>
         <li>Reduce the heat to low, cover the pot, and let the sauce simmer for at least 1 hour, stirring occasionally.</li>
         <li>If the sauce becomes too thick, you can add a splash of milk or cream to thin it out.</li>
-    </ol>
+    </ul>
     <h3>Step 3: Cook the Homemade Pasta</h3>
-    <ol>
+    <ul>
         <li>Bring a large pot of salted water to a boil.</li>
         <li>Carefully add the homemade pasta to the boiling water and cook until al dente, usually 2-3 minutes for fresh pasta.</li>
         <li>Drain the cooked pasta, reserving a cup of the pasta water.</li>
-    </ol>
+    </ul>
     <h3>Step 4: Combine the Pasta and Sauce</h3>
-    <ol>
+    <ul>
         <li>Add the cooked pasta to the pot with the Bolognese sauce.</li>
         <li>Toss the pasta and sauce together until the pasta is evenly coated.</li>
         <li>If the sauce seems too thick, you can add some of the reserved pasta water to loosen it up.</li>
-    </ol>
+    </ul>
     <h3>Step 5: Serve</h3>
-    <ol>
+    <ul>
         <li>Divide the Homemade Pasta Bolognese among serving plates or bowls.</li>
         <li>Garnish with freshly grated Parmesan cheese and chopped fresh basil or parsley.</li>
         <li>Serve immediately and enjoy your delicious Homemade Pasta Bolognese!</li>
-    </ol>
-
-    <a href="../index.html">Go back to home</a>
+    </ul>
+    <div class="man">
+        <h4>Made by MrNoBox</h4>
+    </div>
+    <h5 class="github">Source Code - <a class="info" href="https://www.github.com/localbox404" target="_blank">Github</a></h5>
 </body>
 </html>
