--- a/index.html
+++ b/index.html
@@ -3,12 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin recipes | Home</title>
+    <title>Odin Recipes</title>
+    <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Jacquarda Bastarda 9', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
+        }
+        .main {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .made {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        h1 {
+            margin: 0 0 20px;
+            color: #333333;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        a {
+            text-decoration: none;
+            color: #007bff;
+            transition: color 0.3s ease;
+        }
+        a:hover {
+            color: #ff0000;
+        }
+    </style>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html" target="_blank"><ul><li>Pizza</li></ul></a>
-    <a href="recipes/pasta.html" target="_blank"><ul><li>Pasta</li></ul></a>
-    <a href="recipes/lasagna.html" target="_blank"><ul><li>Lasagna</li></ul></a>
+    <div class="main">
+        <div class="made">
+            <h1>Odin Recipes</h1>
+        </div>
+        <ul>
+            <li><a href="recipes/pizza.html" target="_blank">Pizza</a></li>
+            <li><a href="recipes/pasta.html" target="_blank">Pasta</a></li>
+            <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
+        </ul>
+    </div>
 </body>
 </html>
