--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipes | Pizza</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1><em>Homemade Pizza</em></h1>
     <img src="../images/pizzahit.jpg" alt="A picture of pizza" height="300">
     <h2><em>Description</em></h2>
-    <p>Pizza is a beloved dish that originated in Italy but has become a global culinary phenomenon. At
+    <p class="pizzahit">Pizza is a beloved dish that originated in Italy but has become a global culinary phenomenon. At
         its core, pizza typically consists of a round, flattened dough base topped with various ingredients 
         such as tomato sauce, cheese, meats, vegetables, and herbs. The dough is usually made from 
         wheat flour, water, yeast, salt, and olive oil, creating a versatile base that can be customized to suit 
@@ -36,7 +40,7 @@
         <li>Herbs and Seasonings (e.g., basil, oregano, salt, pepper)</li>
     </ul>
     <h2><em>Steps</em></h2>
-    <ol>
+    <ul>
         <li>Preheat your oven to 475°F (245°C).</li>
         <li>Roll out the pizza dough on a lightly floured surface into your desired shape (round or rectangular).</li>
         <li>Spread pizza sauce evenly over the dough, leaving a small border around the edges.</li>
@@ -46,8 +50,10 @@
         <li>Bake in the preheated oven for 10-12 minutes, or until the crust is golden brown and the cheese is melted and bubbly.</li>
         <li>Remove the pizza from the oven and let it cool for a minute.</li>
         <li>Slice the pizza and serve hot.</li>
-    </ol>
-
-    <a href="../index.html">Go back to home</a>
+    </ul>
+    <div class="man">
+        <h4>Made by MrNoBox</h4>
+    </div>
+    <h5 class="github">Source Code - <a class="info" href="https://www.github.com/localbox404" target="_blank">Github</a></h5>   
 </body>
 </html>
