Fixed bugs (hyperlinks)

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -101,6 +101,6 @@
     <div class="man">
         <h4>Made by MrNoBox</h4>
     </div>
-    <h5 class="github">Source Code - <a class="info" href="https://www.github.com/localbox404" target="_blank">Github</a></h5>
+    <h5 class="github">Source Code - <a class="info" href="https://github.com/localbox404/odin-recipe" target="_blank">Github</a></h5>
 </body>
 </html>
